# groat

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-b71028979bfd85df98454af1106097cf7976677500e42b8cf54977f17de660f0.json  query-bcd826e988d5c320704ce647dc8ec792c68e65aabe6590ec7f7cab186896101b.json  query-c3fae9e9fcedf5461ace5e2e803cf55ea00f7a3e7d3ec26115bb9b91329a1352.json  query-cac4aa3e87acdbdb0f185206daf9195741547e8a616a5d8090a52dc43ec6279b.json
crates/groat/: Cargo.toml
crates/groat-core/: Cargo.toml
crates/groat-core/src/: cost.rs  lib.rs  request.rs  response.rs
crates/groat-embed/: Cargo.toml
crates/groat-embed/src/: embedder.rs  lib.rs  store.rs
crates/groat-providers/: Cargo.toml
crates/groat-providers/src/: lib.rs  ollama.rs
crates/groat-storage/: Cargo.toml
crates/groat-storage/migrations/: 20260101000000_init.sql
crates/groat-storage/src/: costs.rs  lib.rs  migrations.rs  requests.rs  schema.rs
crates/groat/src/: cmd_config.rs  cmd_status.rs  cmd_up.rs  cmd_version.rs  main.rs
docs/architecture/: cost-reduction.md  routing.md
docs/research/: graph-routing.md  prefetching.md
web/: components.json  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/: page.tsx
web/components/features/: FeatureGrid.tsx  Features.tsx  TechStackStrip.tsx  TechnicalDeepDive.tsx
web/components/footer/: Footer.tsx
web/components/hero/: Hero.tsx  HeroBackground.tsx  TerminalPanel.tsx
web/components/installation/: Installation.tsx
web/components/methodology/: Methodology.tsx  RequestFlowDiagram.tsx
web/components/nav/: Nav.tsx  Navbar.tsx
web/components/theme/: Logo.tsx  ThemeProvider.tsx  ThemeToggle.tsx
web/components/ui/: Button.tsx  CopyBlock.tsx
