[workspace]
members = [
    "crates/groat",
    "crates/groat-core",
    "crates/groat-providers",
    "crates/groat-storage",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/bhavv04/groat"

[workspace.dependencies]
tokio    = { version = "1", features = ["full"] }
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
tracing  = "0.1"
thiserror = "1"
anyhow   = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true