[package]
name = "groat-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
groat-core = { path = "../groat-core" }
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"
hf-hub = { version = "0.3", features = ["tokio"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "1"
anyhow = "1"