[package]
name = "groat-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
groat-core = { path = "../groat-core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "1"
futures = "0.3"