[package]
name = "groat-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
groat-core = { path = "../groat-core" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "migrate"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }