[package]
name = "groat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "groat"
path = "src/main.rs"

[dependencies]
groat-core = { path = "../groat-core" }
groat-providers = { path = "../groat-providers" }
groat-storage = { path = "../groat-storage" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }